feat: Implement compass data types and functionality
This commit introduces three new data types for displaying compass information:
- **Degrees:** Shows the current heading in degrees.
- **CardinalDirection:** Displays the current heading as a cardinal direction (N, NE, E, etc.).
- **Pitch (Grade):** Shows the current pitch/grade as a percentage.

Key changes include:
- Renaming the project and relevant files from "template" to "karoocompass".
- Adding `CompassProvider` to manage sensor data (accelerometer and magnetic field) and provide flows for heading and pitch.
- Implementing `DegreesDataType`, `CardinalDirectionDataType`, and `PitchDataType` to handle the display and streaming of the respective compass data.
- Creating a `CardinalView` composable for the graphical display of cardinal directions.
- Updating `extension_info.xml` to define the new data types.
- Updating `AndroidManifest.xml` with the new application name and extension service.
- Modifying `strings.xml` to include titles and descriptions for the new data types.
- Removing the placeholder `MainScreen` content.
- Adding a compass icon.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <resources>
-    <string name="app_name">template</string>
-    <string name="hello_karoo">Hello Karoo!</string>
-    <string name="extension_name">template</string>
-    <string name="datatype_title">template</string>
-    <string name="datatype_description">template</string>
+    <string name="app_name">Karoo Compass</string>
+    <string name="extension_name">Karoo Compass</string>
+    <string name="degrees_title">Degrees</string>
+    <string name="degrees_description">Direction in degrees</string>
+    <string name="cardinaldirection_title">Cardinal Direction</string>
+    <string name="cardinaldirection_title_short">Heading</string>
+    <string name="cardinaldirection_description">Current heading in cardinal direction</string>
+    <string name="pitch_title">% Grade</string>
+    <string name="pitch_title_short">Grade</string>
+    <string name="pitch_description">Current grade using titl sensor</string>
 </resources>
