--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="cardinaldirection_title">Cardinal Direction</string>
     <string name="cardinaldirection_title_short">Heading</string>
     <string name="cardinaldirection_description">Current heading in cardinal direction</string>
-    <string name="pitch_title">% Grade</string>
+    <string name="pitch_title">\% Grade</string>
     <string name="pitch_title_short">Grade</string>
-    <string name="pitch_description">Current grade using titl sensor</string>
+    <string name="pitch_description">Current grade using title sensor</string>
+    <string name="save">Save</string>
+
 </resources>
