--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,12 @@
     <string name="extension_name">Karoo Compass</string>
     <string name="degrees_title">Degrees</string>
     <string name="degrees_description">Direction in degrees</string>
-    <string name="cardinaldirection_title">Cardinal Direction</string>
+    <string name="cardinaldirection_title">Heading</string>
     <string name="cardinaldirection_title_short">Heading</string>
     <string name="cardinaldirection_description">Current heading in cardinal direction</string>
     <string name="pitch_title">\% Grade</string>
     <string name="pitch_title_short">Grade</string>
-    <string name="pitch_description">Current grade using title sensor</string>
+    <string name="pitch_description">Current grade using tilt sensor</string>
     <string name="save">Save</string>
 
 </resources>
